--- a/Webpack/task_0/package.json
+++ b/Webpack/task_0/package.json
@@ -1,27 +1,18 @@
 {
   "name": "task_0",
   "version": "1.0.0",
+  "description": "webpack basic setup",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "author": "edin93",
   "license": "ISC",
   "devDependencies": {
-    "@eslint/eslintrc": "^3.0.2",
-    "@eslint/js": "^9.0.0",
-    "eslint": "^8.57.0",
-    "eslint-config-standard": "^17.1.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-n": "^16.6.2",
-    "eslint-plugin-promise": "^6.1.1",
-    "globals": "^15.0.0",
-    "webpack": "^5.91.0",
-    "webpack-cli": "^5.1.4"
+    "webpack": "^5.21.2",
+    "webpack-cli": "^4.5.0"
   },
   "dependencies": {
-    "jquery": "^3.7.1"
-  },
-  "description": ""
+    "jquery": "^3.5.1"
+  }
 }
