--- a/Webpack/task_0/package.json
+++ b/Webpack/task_0/package.json
@@ -1,27 +1,16 @@
 {
   "name": "task_0",
-  "version": "1.0.0",
-  "description": "",
+  "version": "1.1.1",
+  "description": "first task",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --mode=production"
+    "test": "echo \"no tests\" && exit 1"
   },
-  "author": "",
-  "license": "ISC",
   "devDependencies": {
-    "@eslint/eslintrc": "^3.0.2",
-    "@eslint/js": "^9.0.0",
-    "eslint": "^8.57.0",
-    "eslint-config-standard": "^17.1.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-n": "^16.6.2",
-    "eslint-plugin-promise": "^6.1.1",
-    "globals": "^15.0.0",
-    "webpack": "^5.89.0",
-    "webpack-cli": "^5.1.4"
+    "webpack": "^5.68.0",
+    "webpack-cli": "^4.9.2"
   },
   "dependencies": {
-    "jquery": "^3.7.1"
+    "jquery": "^1.7.4"
   }
 }
