--- a/Webpack/task_1/package.json
+++ b/Webpack/task_1/package.json
@@ -12,6 +12,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@eslint/js": "^9.0.0",
+    "eslint": "^9.0.0",
+    "globals": "^15.0.0",
     "webpack": "^5.91.0"
   },
   "dependencies": {
