--- a/react_props/task_0/dashboard/package.json
+++ b/react_props/task_0/dashboard/package.json
@@ -36,6 +36,9 @@
     ]
   },
   "devDependencies": {
-    "chai": "^5.1.0"
+    "chai": "^5.1.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.8",
+    "jest": "^27.5.1"
   }
 }
