--- a/react_intro/task_5/dashboard/package.json
+++ b/react_intro/task_5/dashboard/package.json
@@ -42,6 +42,7 @@
     "@babel/preset-env": "^7.24.4",
     "@babel/preset-react": "^7.24.1",
     "babel-loader": "^9.1.3",
+    "chai": "^5.1.0",
     "css-loader": "^7.1.1",
     "file-loader": "^6.2.0",
     "image-webpack-loader": "^8.1.0",
